--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Lobby.Lobby
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/Maps/Menu.Menu
+EditorStartupMap=/Game/Maps/Menu.Menu
 GlobalDefaultGameMode="/Script/PuzzlePlatforms.PuzzlePlatformsGameMode"
 GameInstanceClass=/Script/PuzzlePlatforms.PuzzlePlatformsGameInstance
 
